<resources>
    <string name="app_name">تاک</string>
    <string name="service_name">سرویس تاک </string>
    <string name="addressbook_label"> تاک</string>
    <string name="notification_title"> تاک</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s اتصال برقرار شده</string>
    <string name="notification_register_failure">%s اتصال برقرار نشد</string>
    <string name="tunnel_host" />
    <string name="about_version"> تاک %s</string>
    <string name="about_liblinphone_version">هسته  تاک %s</string>
    <string name="about_liblinphone_sdk_version"> تاک SDK %s</string>
    <string name="about_privacy_policy">مشاهده سیاست حفظ حریم خصوصی</string>
    <string name="sync_account_name">مخاطبین  تاک</string>
    <string name="notification_reply_label">پاسخ</string>
    <string name="notification_replied_label">ارسال پاسخ: %s</string>
    <string name="notification_call_hangup_label">معوق</string>
    <string name="notification_call_answer_label">جواب</string>
    <string name="notification_mark_as_read_label">علامت گذاری به عنوان خوانده شده</string>
    <string name="username">نام کاربری</string>
    <string name="userid">شناسه-کاربر (اختیاری)</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="confirmation_code">کد تایید</string>
    <string name="international_prefix">پیشوند شماره تلفن بین المللی</string>
    <string name="display_name">نمایش نام</string>
    <string name="password">گذرواژه</string>
    <string name="confirm_password">تایید رمز عبور</string>
    <string name="domain">دامنه</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">پست الکترونیکی</string>
    <string name="delete_text">آیا مطمئن هستید که می خواهید موارد انتخاب شده را حذف کنید؟</string>
    <string name="delete">حذف</string>
    <string name="retry">دوباره امتحان کنید</string>
    <string name="cancel">لغو</string>
    <string name="accept">تایید</string>
    <string name="open">باز کردن</string>
    <string name="continue_text">ادامه دادن</string>
    <string name="about">درباره</string>
    <string name="deny">رد کردن</string>
    <string name="no_account">هیچ حسابی پیکربندی نشده است</string>
    <string name="search">جستجو</string>
    <string name="outgoing">وقایع</string>
    <string name="incoming">ورودی</string>
    <string name="missed">از دست رفته</string>
    <string name="settings">تنظیمات</string>
    <string name="connect">ارتباط</string>
    <string name="decline">Decline</string>
    <string name="conference">کنفرانس</string>
    <string name="link">پیوند</string>
    <string name="link_account_popup">آیا می خواهید حساب %s را با شماره تماس خود پیوند دهید؟</string>
    <string name="maybe_later">شاید بعدا</string>
    <string name="later">بعدا</string>
    <string name="no">حیر</string>
    <string name="ok">باشه</string>
    <string name="yes">بله</string>
    <string name="link_account">حساب خود را پیوند دهید</string>
    <string name="update_available">بروزرسانی موجود است</string>
    <string name="do_not_ask_again">دوباره نمایش نده</string>
    <string name="delete_contacts_text">مطمئن هستید که می خواهید این مخاطبین را حذف کنید? \ همچنین از تلفن شما نیز حذف می شوند!</string>
    <string name="logs_url_copied_to_clipboard">آدرس اینترنتی در کلیپ بورد کپی شده</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">خوش آمدید</string>
    <string name="assistant">دستیار</string>
    <string name="assistant_create_account">ایجاد حساب</string>
    <string name="assistant_link_account">پیوند حساب</string>
    <string name="assistant_continue">ادامه دادن</string>
    <string name="assistant_activate">فعال سازی حساب</string>
    <string name="assistant_finish">پایان پیکربندی</string>
    <string name="assistant_validate_account_1">حساب شما ایجاد شده است، لطفاً ایمیل خود را بررسی کنید تا اعتبار خود را تأیید کنید:</string>
    <string name="assistant_validate_account_2">پس از اتمام کار، به اینجا بازگردید و بر روی دکمه کلیک کنید.</string>
    <string name="assistant_welcome_desc">این دستیار به شما در پیکربندی و استفاده از حساب SIP کمک می کند.</string>
    <string name="assistant_linphone_login_desc">لطفاً نام کاربری و رمز ورود حساب تاک را وارد کنید</string>
    <string name="assistant_login_desc">لطفاً نام کاربری و رمز عبور خود را با دامنه SIP وارد کنید</string>
    <string name="assistant_remote_provisioning_desc">لطفا تامین کننده URL خود را ارائه دهید</string>
    <string name="transport">انتقال</string>
    <string name="assistant_create_account_phone_number_address">آدرس SIP شما هست</string>
    <string name="assistant_login_linphone">از حساب  تاک استفاده کنید</string>
    <string name="assistant_login_generic">از حساب SIP استفاده کنید</string>
    <string name="assistant_remote_provisioning">واکشی پیکربندی از راه دور</string>
    <string name="assistant_create_account_part_1">لطفاً کد کشور خود را تأیید کرده و شماره تلفن خود را وارد کنید</string>
    <string name="assistant_create_account_part_2">ما برای شماپیامک با کد اعتبار سنجی ارسال کرده ایم:</string>
    <string name="assistant_create_account_part_3">برای تأیید شماره تلفن، لطفاً کد 4 رقمی زیر را وارد کنید: \n</string>
    <string name="assistant_create_account_part_email">لطفاً یک نام کاربری، ایمیل و گذرواژه برای حساب  تاک خود وارد کنید</string>
    <string name="assistant_display_name_optional">نمایش نام (اختیاری)</string>
    <string name="assistant_linphone_account">از حساب تاک خود استفاده کنید</string>
    <string name="assistant_generic_account">از حساب SIP استفاده کنید</string>
    <string name="assistant_remote_provisioning_title">واکشی پیکربندی از راه دور</string>
    <string name="assistant_fetch_apply">واکشی و اعمال</string>
    <string name="assistant_launch_qrcode">QR کد</string>
    <string name="assistant_login">ورود</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">ورود</string>
    <string name="assistant_account_not_validated">حساب شما هنوز تأیید نشده است</string>
    <string name="assistant_error_confirmation_code">کد تأیید نامعتبر است لطفا دوباره امتحان کنید.</string>
    <string name="assistant_account_validated">حساب شما تأیید شده است</string>
    <string name="assistant_error_bad_credentials">نام کاربری یا گذرواژه اشتباه است</string>
    <string name="assistant_codec_down_question">آیا شما موافق هستید تا از کدک ویدئویی OpenH264 ارائه شده توسط شرکت Cisco Systems، استفاده کنید؟</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">قبل از استفاده از کدک OpenH264 باید مجدداً برنامه را راه اندازی کنید %s.</string>
    <string name="assistant_openh264_error">متأسفیم، خطایی رخ داده است.</string>
    <string name="assistant_codec_downloaded">دانلود کدک ویدئویی H264 ارائه شده توسط شرکت Cisco Systems.</string>
    <string name="wizard_failed">خطایی رخ داده است، بعداً دوباره امتحان کنید.</string>
    <string name="wizard_server_unavailable">سرور غیر قابل دستیابی است، اتصال شبکه خود را بررسی کنید.</string>
    <string name="wizard_username_unavailable">این نام کاربری قبلاً اعطاء شده است</string>
    <string name="assistant_phone_number_unavailable">این شماره قبلاً استفاده شده لطفا شماره دیگری را وارد کنید.</string>
    <string name="wizard_username_incorrect">نام کاربری اشتباه است</string>
    <string name="assistant_phone_number_incorrect">شماره تلفن شما اشتباه است</string>
    <string name="wizard_email_incorrect">ایمیل شما اشتباه است</string>
    <string name="wizard_password_incorrect">گذرواژه شما اشباه است</string>
    <string name="wizard_passwords_unmatched">رمزهای ورود مطابقت ندارند.</string>
    <string name="setup_confirm_username">نام کاربری شما%s خواهد بود. n \n\ ممکن است با ورودی شما  متفاوت باشد. n\ آیا می پذیرید؟</string>
    <string name="first_launch_no_login_password">لطفا نام کاربری و گذرواژه خود را وارد کنید</string>
    <string name="forgot_password">گذرواژه خود را فراموش کرده اید؟</string>
    <string name="assistant_choose_country">یک کشور را انتخاب کنید</string>
    <string name="select_your_country">کشور خود را انتخاب کنید</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">استفاده از یک نام کاربری (اختیاری)</string>
    <string name="use_email_for_validation">برای اعتبار سنجی حساب از آدرس ایمیل استفاده کنید</string>
    <string name="login_with_username">به جای شماره تلفن خود از نام کاربری و رمز عبور خود استفاده کنید</string>
    <string name="phone_number_info_title">شماره تلفن من برای چه مواردی استفاده خواهد شد؟</string>
    <string name="phone_number_info_content">\nبه لطف شماره تلفن شما ، دوستانتان راحت تر شما را پیدا می کنند.\n\n در کتاب آدرس خود مشاهده خواهید کرد که از  تاک استفاده می کند و دوستانتان خواهند دانست که آنها نیز میتوانند شما را در تاک بیابند </string>
    <string name="phone_number_link_info_content">\nبه لطف شماره تلفن شما ، دوستانتان راحت تر شما را پیدا می کنند.\n\n در کتاب آدرس خود مشاهده خواهید کرد که از تاک استفاده می کند و دوستانتان خواهند دانست که آنها نیز میتوانند شما را در تاک بیابند </string>
    <string name="phone_number_link_info_content_already_account">فقط می توانید شماره تلفن خود را با یک حساب  تاک استفاده کنید n\n\ اگر قبلاً شماره خود را به یک حساب دیگر پیوند داده اید اما ترجیح می دهید از این شماره استفاده کنید ، همین حالا آن را پیوند دهید، شماره شما به طور خودکار به این حساب منتقل می شود.</string>
    <string name="phone_number_overuse">در مدت زمان کوتاه پیامک های زیادی به این شماره ارسال شده است، در 24 ساعت دوباره امتحان کنید.</string>
    <string name="account_doesnt_exist">اکانت\'t موجود نیست</string>
    <string name="invalid_email">ایمیل نامعتبر</string>
    <string name="account_already_exist">حساب در حال حاضر وجود دارد</string>
    <string name="phone_number_not_exist">این حساب وجود ندارد</string>
    <string name="invalid_username">نام کاربری نامعتبر</string>
    <string name="invalid_domain">دامنه نامعتبر</string>
    <string name="invalid_route">مسیر نامعتبر</string>
    <string name="invalid_display_name">نام نامعتبر</string>
    <string name="username_too_short">نام کاربری خیلی کوتاه است</string>
    <string name="username_invalid_size">طول نام کاربری نامعتبر</string>
    <string name="phone_number_too_long">شماره تلفن خیلی طولانی است</string>
    <string name="phone_number_too_short">شماره تلفن خیلی کوتاه است</string>
    <string name="phone_number_invalid">شماره تلفن نامعتبر است</string>
    <string name="activation_code_invalid">کد فعال سازی نامعتبر است</string>
    <string name="password_too_short">گذرواژه خیلی کوتاه است</string>
    <string name="password_too_long">گذرواژه خیلی طولانی است</string>
    <string name="request_failed">جستجوی سرور انجام نشد. لطفا بعدا دوباره امتحان کنید</string>
    <string name="transport_unsupported">انتقال پشتیبانی نشده است</string>
    <string name="country_code_invalid">کد کشور نا معتبر است</string>
    <string name="invalid_characters">نویسه نامعتبر یافت شد</string>
    <string name="inapp">در برنامه</string>
    <string name="inapp_notification_title">خرید درون برنامه</string>
    <string name="inapp_notification_trial_expire">دوره آزمایشی منقضی می شود %s</string>
    <string name="inapp_notification_account_expire">دوره اشتراک منقضی می شود %s</string>
    <string name="content_description_dialer">شماره گیر</string>
    <string name="content_description_call">تماس</string>
    <string name="content_description_dialer_back">بازگشت به شماره گیر</string>
    <string name="content_description_numpad">Numpad</string>
    <string name="content_description_history">دکمه تاریخچه</string>
    <string name="content_description_chat_button">دکمه چت</string>
    <string name="content_description_contacts">دکمه مخاطبین</string>
</resources>