<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_bar"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <View
        android:id="@+id/vertical_divider"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <org.linphone.call.views.CallButton
        android:id="@+id/hang_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        app:cb_color="#cc0000"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/content_description_call"
        android:padding="20dp"
        android:src="@drawable/call_hangup"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/vertical_divider">

        <View
            android:id="@+id/left_vertical_divider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/dialer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/left_vertical_divider"
            android:contentDescription="@string/content_description_numpad"
            android:padding="0dp"
            android:src="@drawable/ic_dialpad" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/vertical_divider">

        <View
            android:id="@+id/right_vertical_divider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/right_vertical_divider">

            <ImageView
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_description_chat_button"
                android:src="@drawable/ic_chat_black_24dp"/>

            <TextView
                android:id="@+id/missed_chats"
                style="@style/unread_count_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/unread_message_count_bg"
                android:gravity="center"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>