<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="?attr/backgroundColor">

    <fragment
        android:id="@+id/status_fragment"
        android:name="org.linphone.fragments.StatusBarFragment"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        tools:layout="@layout/status_bar" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/side_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/status_fragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layoutDirection="ltr"
                android:background="?attr/lighToolbarBackgroundColor"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="?attr/button_background_drawable"
                    android:contentDescription="@string/content_description_dialer_back"
                    android:padding="13dp"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/top_bar_title"
                    style="@style/toolbar_title_font"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/footer"
                android:layout_below="@id/top_bar"
                android:orientation="horizontal" />

            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layoutDirection="rtl"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/history"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_description_history"
                        android:src="@drawable/ic_watch" />

                    <View
                        android:id="@+id/history_select"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_alignParentBottom="true"
                        android:background="?attr/accentColor"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/missed_calls"
                        style="@style/unread_count_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/unread_message_count_bg"
                        android:gravity="center"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/contacts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white_color">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_description_contacts"
                        android:src="@drawable/ic_contacts" />

                    <View
                        android:id="@+id/contacts_select"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_alignParentBottom="true"
                        android:background="?attr/accentColor"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dialer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white_color">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_description_dialer"
                        android:src="@drawable/ic_dialpad" />

                    <View
                        android:id="@+id/dialer_select"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_alignParentBottom="true"
                        android:background="?attr/accentColor" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/chat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white_color">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_description_chat_button"
                        android:src="@drawable/ic_chat_black_24dp" />

                    <View
                        android:id="@+id/chat_select"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_alignParentBottom="true"
                        android:background="?attr/accentColor"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/missed_chats"
                        style="@style/unread_count_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/unread_message_count_bg"
                        android:gravity="center"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmentContainer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>

        </RelativeLayout>

        <!-- Side Menu -->
        <LinearLayout
            android:id="@+id/side_menu_content"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            >
            <fragment
                android:id="@+id/side_menu_fragment"
                android:name="org.linphone.menu.SideMenuFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/side_menu" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>